# django-server

./: .dockerignore  .env.example  .env.github.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: deploy.yaml
apps/api/: api.py  auth.py  schema.py
apps/group/: admin.py  models.py  schema.py
apps/group/api/: __init__.py  group.py  group_member.py  group_vote.py
apps/group/migrations/: 0001_initial.py  0002_mvpvote.py
apps/group/schema/: __init__.py  group.py  group_vote.py
apps/summary/: admin.py  api.py  apps.py  models.py  schema.py
apps/summary/migrations/: 0001_initial.py
apps/summary/services/: gemini_service.py
apps/usage/: admin.py  models.py
apps/usage/api/: __init__.py  endpoints.py  router.py  schemas.py
apps/usage/migrations/: 0001_initial.py  0002_appinfo_alter_usagerecord_options_and_more.py  0003_usagerecord_app_usagerecord_created_at_and_more.py
apps/users/: admin.py  models.py
apps/users/api/: endpoints.py  schemas.py
apps/users/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  local.py  prod.py
nginx/: defaul.conf  default.conf
