[project]
name = "capstone-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "django-ninja>=1.4.3",
    "google-genai>=1.28.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "pillow>=11.3.0",
    "python-magic-bin>=0.4.14 ; sys_platform == 'darwin' or sys_platform == 'win32'",
    "python-magic>=0.4.27 ; sys_platform == 'linux'",
    "logfire[django,sqlite3]>=4.3.3",
]
